# Start

./: .gitignore  PRD.md  app-flow.md  conflicts.diff  generate_test_files.py  index.html  last_commit.txt  log.txt  package-lock.json  package.json  security-checklist.md  tech-stack-overview.md  tsc_errors.txt  tsc_errors2.txt  tsc_errors2_utf8.txt  tsc_errors3_utf8.txt  tsc_errors_utf8.txt  tsc_output_clean.txt  tsc_output_clean2.txt  tsc_output_clean4.txt  tsconfig.json  tsconfig.tsbuildinfo  ui-guidelines.md  unmerged.txt  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts  vite.config.ts.timestamp-1770963262971-0a583d76cdc1c.mjs
src-wasm/: Cargo.toml  build_cargo.txt  build_err.txt  build_err_seq.txt  build_log.txt  build_phase2.txt  build_phase2_correct.txt  build_phase2_ps.txt  error.txt  meta.json
src-wasm/pkg/: cifad_wasm.d.ts  cifad_wasm.js  cifad_wasm_bg.wasm  cifad_wasm_bg.wasm.d.ts
src-wasm/src/: crypto.rs  lib.rs  math.rs  parser.rs
src-wasm/target_build/: .rustc_info.json
src-wasm/target_build/release/.fingerprint/proc-macro2-001ff29431967c97/: build-script-build-script-build  build-script-build-script-build.json
src-wasm/target_build/release/.fingerprint/proc-macro2-af6eec32fdfee074/: lib-proc_macro2  lib-proc_macro2.json
src-wasm/target_build/release/.fingerprint/proc-macro2-ede827b1b2a7eabc/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-wasm/target_build/wasm32-unknown-unknown/release/: cifad_wasm.d  cifad_wasm.wasm  libcifad_wasm.d
src-wasm/temp_build/: .rustc_info.json
(+175 files in other folders)
